[package]
name = "xmltojson"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
log = "~0.4.8"
serde = { version = "~1.0.116", features = ["rc"] }
serde_json = "~1.0.0"
quick-xml = { version = "~0.19.0", features = ["serde"] }

[dev-dependencies]
pretty_env_logger = "~0.3.1"
