[package]
name = "xmltojson"
version = "0.1.1"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"
description = "A simple crate for converting XML to JSON"
homepage = "https://github.com/rtyler/xmltojson"
repository = "https://github.com/rtyler/xmltojson"
license = "LGPL-3.0+"
keywords = ["xml", "json"]
readme = "README.md"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
quick-xml = { version = "0.19", features = ["serde"] }

[dev-dependencies]
pretty_env_logger = "0"
